program detail voc 1 sector

--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -98,7 +98,7 @@
                         <oipa-pie-chart group-by="recipient_country" aggregation-key="activity_count" aggregations="activity_count,incoming_fund" has-to-contain="related_activity"></oipa-pie-chart>
                         <h3>Projects per sector</h3>
                         <hr>
-                        <oipa-pie-chart group-by="sector" aggregation-key="activity_count" aggregations="activity_count,incoming_fund" has-to-contain="related_activity"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="sector" aggregation-key="activity_count" aggregations="activity_count,incoming_fund" has-to-contain="related_activity" extra-filter="&sector_vocabulary=1"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue" ng-show="vm.programmeUrl">
                         <h3>More information</h3>
