--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -128,6 +128,8 @@
                             </tr>
                         </table>
                     </div>
+                    <programme-sdgs has-to-contain="recipient_country"></programme-sdgs>
+                    
                 </div>
             </div>
         </div>
