--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -651,7 +651,7 @@
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
-                        <div class="row" ng-if="vm.relatedYoutube.length != 0 || vm.relatedVimeo.length != 0">
+                        <div class="row" ng-if="vm.relatedYoutube.length != 0 || vm.relatedVimeo.length != 0 || vm.relatedVideo.length != 0">
                             <div class="col-md-6 item" ng-repeat="video in vm.relatedVimeo">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <iframe class="embed-responsive-item" ng-src="{{video.url}}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -662,8 +662,19 @@
                                     <iframe class="embed-responsive-item" width="560" height="315" ng-src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
+
+                            <div class="col-md-6 item" ng-repeat="video in vm.relatedVideo">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <video width="560" height="315" controls>
+                                      <source ng-src="{{video.url}}" type="video/mp4">
+                                      <source ng-src="{{video.url}}" type="video/ogg">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+                            </div>
+
                         </div>
-                        <p ng-if="vm.relatedYoutube.length == 0 && vm.relatedVimeo.length == 0">Data to be added</p>
+                        <p ng-if="vm.relatedYoutube.length == 0 && vm.relatedVimeo.length == 0 && vm.relatedVideo.length == 0">Data to be added</p>
                     </div>
                     <div class="panel lightblue images">
                         <h3>Related images</h3>
