--- a/templates/filters/filter-panel-transaction-year.html
+++ b/templates/filters/filter-panel-transaction-year.html
@@ -12,6 +12,8 @@
                 	<div class="custom-select ff-hack">
 
                         <select ng-model="vm.transactionYear">
+                            <option value='2018'>2018</option>
+                            <option value='2017'>2017</option>
                             <option value='2016'>2016</option>
                             <option value='2015'>2015</option>
                             <option value='2014'>2014</option>
