Update about page

--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,23 +1,59 @@
 <div id="main-content" class="about-page container">
 	<div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-		    <h2>What data can be found on this portal of the Netherlands Enterprise Agency (RVO.nl)?</h2>
-			<p>This portal visualizes  the open data on official development aid (ODA) projects and programmes executed by the <a href="http://english.rvo.nl/">Netherlands Enterprise Agency (RVO.nl)</a> and commissioned and funded by the Ministry of Foreign Affairs of the Netherlands. The Ministry of Infrastructure and Environment is co-financer of one programme. The information relates to projects that were either active on or started after January 2015.</p>
-			<p>The data is published according to the <a href="http://www.iatistandard.org">International Aid Transparancy Initiative (IATI) standard</a>, which is easy for computers to read, but very hard for humans . The information is therefore made accessible through a web interface. It does not alter or interpret the data in any way. Additional non-IATI data on projects - as monitoring reports, photos and videos - is added regularly. </p>
-			<p>By publishing this data on a website it becomes relatively easy to see which projects are being carried out for a particular country, sector or programme. It also makes it possible to see when, where and by whom projects are being carried out and how much money is being spent. In 2016, data on results (outcome) of projects will be added increasingly.</p>
-			<p>The Netherlands Enterprise Agency publishes and updates its projects at least on a quarterly basis. The policy is that all project information should be published, unless there is a clear reason for not doing so. Only confidentiality of data or safety for staff executing a project can be a reason for not publishing data. This can be on individual pieces of information or the entire project.</p>
+		    <h2>What data can be found on this portal of the Netherlands Enterprise Agency(RVO.nl)?</h2>
+			<p>This portal visualizes the open data on official development aid (ODA) projects and programmes executed by the <a href="http://english.rvo.nl/">Netherlands Enterprise Agency(RVO.nl)</a> and commissioned and funded by the Ministry of Foreign Affairs of the Netherlands. Also the Ministry of Infrastructure and Water Management is co-financer of some programmes. The information relates to projects that were either active on or started after January 2015.</p>
+			<p>The data is published according to the <a href="http://www.iatistandard.org">International Aid Transparancy Initiative (IATI) standard</a>, which is easy for computers to read, but very hard for humans. The information is therefore made accessible through a web interface. It does not alter or interpret the data in any way. Additional non-IATI data on projects - as monitoring reports, photos and videos - is added regularly. </p>
+			<p>By publishing this data on a website, it becomes relatively easy to see which projects are being carried out for a country, sector or programme. It also makes it possible to see when, where and by whom projects are being carried out and how much money is being spent. In 2016, data on results (outcome) of projects will be added increasingly.</p>
+			<p>The Netherlands Enterprise Agency publishes and updates its datasets at least on a quarterly basis. Info on projects are in this portal updated in real time. The policy is that all project information should be published, unless there is a clear reason for not doing so. </p>
 			<p>Data is visualized for 15 of the 20 ODA programmes which Netherlands Enterprise Agency is executing.</p>
 
 			<h2>Why is open data important?</h2>
 			<p>Transparency of development aid enhances the effectiveness and quality of development aid. Politicians, civil society, the media and the public get better insight into how public money is spent.</p>
 			<p>Additionally, open data can be used as a communication tool, monitoring & evaluation tool, information and knowledge management system and create track records.</p>
-			<p>Finally, visualisation of data will also alter the way Netherlands Enterprise Agency reports to the Ministry of Foreign Affairs of the Netherlands on goals and results of programmes and projects. </p>
+			<p>Finally, visualisation of data will also alter the way the Netherlands Enterprise Agency reports to the Ministry of Foreign Affairs of the Netherlands on goals and results of programmes and projects. </p>
 
 			<h2>Data quality</h2>
-			<p>Data quality is one of the major challenges. Traditionally the data comes from fragmented information stored in internal systems, used for reporting to the Ministry of Foreign Affairs. (Not with open publication in mind.)</p>
-			<p>We believe that open data is not about the publication of perfect data - it’s about perfecting that data and the projects that it pertains to. As the culture of open data and transparency becomes embedded into the organisation, the quality and application of data will continue to improve.</p>
-			<p>The financial data in this portal does not automatically synchronize completely with the finance &  control accounting system of RVO.nl. This system is always leading and more accurate.</p>
-			<p>Despite all efforts, it is very well possible  that errors or imperfections are noticed in our data files. If so, don’t hesitate to let us know via <a href="mailto:iati@rvo.nl">iati@rvo.nl</a>.</p>
+			<p>Data quality is one of the major challenges. The Netherlands Enterprise Agency values the quality and consistency of its open data. Therefore, the Agency publishes only project data that meet our quality requirements. Data that does not meet the minimum requirements will be excluded.</p>
+			<p>We believe that open data is not about the publication of perfect data - it’s about perfecting that data and the projects that it pertains to. As the culture of open data and transparency becomes embedded into the organization, the quality and application of data will continue to improve.</p>
+			<p>The financial data in this portal does not automatically synchronize completely with the finance & control accounting system of the Netherlands Enterprise Agency. This system is always leading and more accurate.</p>
+			<p>Despite all efforts, it is very well possible that errors or imperfections are noticed in our data files. If so, don’t hesitate to let us know via <a href="mailto:iati@rvo.nl">iati@rvo.nl</a>.</p>
+
+			<h2>Exclusion Policy on data</h2>
+			<p>The Netherlands Enterprise Agency embraces the principle “Open, unless...”. </p>
+			<p>Project information is only excluded from publication to IATI if it falls in one of the following categories: </p>
+			<p>
+				<ul>
+					<li>Information disclosure affecting relations between business partner/organization and government or NGOs; </li>
+					<li>Detailed specific information affecting the safety and security of RVO staff, business partner staff or beneficiaries; </li>
+					<li>Specific personal information of individual staff and/or business partners (e.g. addresses);</li>
+					<li>Commercial sensitive information; </li>
+					<li>Information that is exempt under data protection laws or by pre-existing organizational policies. </li>
+				</ul>
+			</p>
+
+			<span class="subtitle">These categories further elaborated and defined:</span>
+			
+			<span class="subtitle">1. General principles for exclusion</span>
+			<span class="subtitle">External relations</span>
+			<p>The Netherlands Enterprise Agency does not publish data that might harm the relationship with any partners of the agency. Business partners are in the ideal situation informed upfront about our policies for publishing project data and may request exclusion, based on the principles in this exclusion policy. The Netherlands Enterprise Agency is, at all times, the final decision-maker for exclusion of data.</p>
+			<span class="subtitle">Security</span>
+			<p>The Netherlands Enterprise Agency does not publish data of which it can reasonably be expected that it might pose a risk to the safety or security of any individuals, business partners, groups of beneficiaries, partner organizations or suppliers. </p>
+			<span class="subtitle">Privacy</span>
+			<p>The Netherlands Enterprise Agency does not publish any project information that is traceable to an individual person and can reasonably be judged as an invasion of the privacy of that person without prior permission of the person involved. In accordance with the General Data Protection Regulation (GDPR) of the EU, the Agency handles personal data with the utmost care and only uses the data for the purpose of processing the particular activity for which you supplied your details. The Agency does not retain your personal data longer than necessary. Consult the <a href="https://english.rvo.nl/home/about-rvonl/what-rvonl/what-rvonl/privacy">Privacy Statement</a> for additional information.</a></p>
+			<span class="subtitle">Commercial/Strategic</span>
+			<p>The Netherlands Enterprise Agency does not publish data that might harm the commercial or strategic interests of the organisation, its business partners, or its suppliers. This does only account if the information is not publicly available in any other way either. Information about the conditions and (re)payments of loans, investments and guarantees is part of this exclusion and will therefore not be published.</p>
+			<span class="subtitle">Legal/Contractual</span>
+			<p>The Netherlands Enterprise Agency does not publish data if we do not have the right to publish the data. For example, if third parties have a copyright on certain information or if contractual agreements with other business partner organizations impede the agencies’ right to publish the data.</p>
+			<span class="subtitle">Social impact</span>
+			<p>The Netherlands Enterprise Agency does not publish data that may possibly harm the social impact of RVO.nl in general or the related project in particular.</p>
+
+			<span class="subtitle">2. Decision-making on excluding data</span>
+			<p>The Netherlands Enterprise Agency is always, the final decision-maker for the exclusion of project data. Since in principle all data is published, the responsibility for excluding information is at the level where this information can be assessed in detail (project level). </p>
+
+			<span class="subtitle">3. Review of exclusion policy and quality of data</span>
+			<p>The international development department of the Netherlands Enterprise Agency will review all data excluded from disclosure on an annual basis. On the one hand it will be reviewed whether data are rightly excluded, on the other hand it will be reviewed whether the exclusion policy is still valid and does not restrict disclosure of data too much. The exclusion policy will be reviewed and if necessary adjusted on an annual basis.</p>
+			<p>The Netherlands Enterprise Agency will be transparent about this exclusion policy. This policy is therefore being published on this portal.</p>
 
 			<h2>Credits</h2>
 			<p>Aiddata.rvo.nl is designed & developed by <a href="http://www.zimmermanzimmerman.nl" target="_blank">Zimmerman & Zimmerman</a>. Zimmerman & Zimmerman is a dutch open-data visualisation company based in Amsterdam that develops open source IATI tools, such as transparency portals for <a href="http://opendata.unesco.org" target="_blank">Open UNESCO</a>, <a href="http://open.unhabitat.org" target="_blank">Open UN-Habitat</a>, <a href="http://www.openaid.nl/" target="_blank">OpenaidNL</a> and the <a href="http://urbandata.unhabitat.org" target="_blank">Urban Data Portal for UN-Habitat</a>. All these tools run on an Open IATI Parser and API called <a href="http://www.oipa.nl" target="_blank">OIPA</a>, which was developed by Zimmerman & Zimmerman.</p>
