--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -136,7 +136,7 @@
                             <tr>
                                 <td>Funding partners:</td>
                                 <td>
-                                    <a class="show-me" ng-if="org.role.code == 1" ui-sref="organisation({ organisation_id: org.narratives[0].text, tab: 'summary' })" ng-repeat='org in vm.activity.participating_organisations'>
+                                    <a class="show-me" ng-if="org.role.code == 1" ui-sref="organisation({ organisation_id: org.narratives[0].text, tab: 'summary', type: 'funding' })" ng-repeat='org in vm.activity.participating_organisations'>
                                     {{org.narratives[0].text}}{{$last ? '' : ', '}}
                                     </a>
                                     <span class="hide-me">Data to be added</span></td>
