Minor text changes

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -6,10 +6,10 @@
   <div class="col-md-4 col-sm-6 left">
     <div class="panel transparent">
       <h1>Data reported to the IATI registry since January 2015</h1>
-      <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs.</p>
+      <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency (RVO.nl) and funded by the Dutch Ministry of Foreign Affairs e.a.</p>
       <div class="disclaimer">
         <h4>Disclaimer</h4>
-        <p>This site was launched in December 2015 and is being updated constantly. Some data is still to be added and other is still under scrutiny. The data on this site is not final for every project and is by no means legally binding.</p>
+        <p>This site was launched in December 2015 and is being updated constantly. The data is under constant scrutiny and is by no means legally binding.</p>
       </div>
     </div>
   </div>
@@ -29,26 +29,26 @@
   <div class="row">
     <div class="col-md-3 col-sm-6">
       <div class="panel">
-        <h3><a ui-sref="programmes" class="icon handshake">Programmes</span></a></h3>  
-        <p>Get a detailed overview of programmes.</p> 
+        <h3><a ui-sref="programmes" class="icon handshake">Programmes</span></a></h3>
+        <p>Get a detailed overview of programmes.</p>
       </div>
     </div>
     <div class="col-md-3 col-sm-6">
       <div class="panel">
-        <h3><a ui-sref="activities" class="icon lightbulb">Projects</span></a></h3>  
-        <p>Get a detailed overview of projects.</p>  
+        <h3><a ui-sref="activities" class="icon lightbulb">Projects</span></a></h3>
+        <p>Get a detailed overview of projects.</p>
       </div>
     </div>
     <div class="col-md-3 col-sm-6">
       <div class="panel">
-        <h3><a ui-sref="locations-map" class="icon globe">Countries</span></a></h3>  
-        <p>See which countries we work in.</p> 
+        <h3><a ui-sref="locations-map" class="icon globe">Countries</span></a></h3>
+        <p>See which countries we work in.</p>
       </div>
     </div>
     <div class="col-md-3 col-sm-6">
       <div class="panel">
-        <h3><a ui-sref="sectors" class="icon medal">Sectors</span></a></h3>  
-        <p>See which sectors we work in.</p> 
+        <h3><a ui-sref="sectors" class="icon medal">Sectors</span></a></h3>
+        <p>See which sectors we work in.</p>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
 
 <div class="row">
     <div class="col-sm-12 map">
-        <div class="geomap-mask">  
+        <div class="geomap-mask">
             <countries-geo-map map-height='400px'></countries-geo-map>
         </div>
     </div>
